Fixed some layout bugs.

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ footer {
 
 #intro {
 	width: 100%;
-	height: 484px;
+	height: 444px;
 	border-bottom: 1px solid #dadada;
 	display: inline-block;
 }
@@ -122,7 +122,7 @@ footer {
 	}
 
 	#intro-canvas {
-		height: 280px;
+		height: 240px;
 		letter-spacing: 10px;
 		text-align: center;
 	}
@@ -348,8 +348,8 @@ footer {
 }
 
 .iconIntro {
-	width: 180px;
-	height: 180px;
+	width: 140px;
+	height: 140px;
 	position: relative;
 	transition: all 1s;
 }
